feat: add height to btn

--- a/W5/style.css
+++ b/W5/style.css
@@ -47,6 +47,7 @@
     background-color: rgb(163, 161, 161);
     border-radius:50%;
     width: 70px;
+    height: 70px;
     color: white;
     font-size: 2rem;
     padding: 20px;
