fix: add adaptive

--- a/W5/style.css
+++ b/W5/style.css
@@ -64,6 +64,7 @@
 }
 .zero{
     width: 170px;
+
 }
 .num{
     background-color:rgb(100, 99, 99)
@@ -74,3 +75,37 @@
 .bg-or:hover{
     background-color:rgb(243, 196, 107)
 }
+@media (max-width: 400px){
+    .btn{
+        width: 60px;
+        height: 60px;
+        padding: 15px;
+ 
+
+    }
+    .equals{
+        width: 200px;
+     
+     }
+     .zero{
+         width: 150px;
+     
+     }
+} 
+@media (max-width: 320px){
+    .btn{
+        width: 60px;
+        height: 60px;
+        padding: 10px;
+        margin: 5px;
+
+    }
+    .equals{
+        width: 200px;
+     
+     }
+     .zero{
+         width: 150px;
+     
+     }
+} 
